src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Enrollment_Start_Date__c</fullName>
        <description>Manually populated field on a Grant record indicating when an Awardee may enroll in  grant program.</description>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Amount__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving amount.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving amount.</inlineHelpText>
        <label>Entered Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency_Rate__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency rate.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency rate.</inlineHelpText>
        <label>Entered Giving Currency Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency code.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency code.</inlineHelpText>
        <label>Entered Giving Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount__c</fullName>
        <description>Populated by trigger, displays the sum of all Expected Giving Amounts.</description>
        <label>Expected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Bar__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Expected_Giving_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Expected_Giving_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Expected_Giving_Ratio__c) + &apos;% of projected&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Ratio__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 100, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <label>Expected Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__External_ID__c</fullName>
        <description>External System or Legacy ID</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fill_Rate__c</fullName>
        <label>Fill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Closed_Payment_Date__c</fullName>
        <description>Populated by trigger, Internal field used in calculation of active date on summary.</description>
        <label>First Closed Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Payment_Date__c</fullName>
        <description>Populated by trigger, internal field used in calculation of pending  date on summary.</description>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary. If the gift should be split across more than one General Accounting Unit - use the Special Allocations related list to specify the split.</description>
        <inlineHelpText>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary. If the gift should be split across more than one General Accounting Unit - use the Special Allocations related list to specify the split.</inlineHelpText>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Amount__c</fullName>
        <description>Manually populated, this field indicates the amount to pledged.</description>
        <label>Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_End_Date__c</fullName>
        <description>Date boundary for Giving Amount calculation defaults to 1 year after pledge or payment date and is assumed to be the default if left blank. (e.g. If a pledge is made on 5/30/2012 for $10 monthly and Giving End Date is 6/5/2014, Giving Amount will be $240 because the gift is planned for 24 months)</description>
        <inlineHelpText>Date boundary for Giving Amount calculation defaults to 1 year after pledge or payment date and is assumed to be the default if left blank.</inlineHelpText>
        <label>Giving End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Frequency__c</fullName>
        <description>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</description>
        <inlineHelpText>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</inlineHelpText>
        <label>Giving Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_ID__c</fullName>
        <description>Populated by formula, this field displays the Current qualifying Giving Level.</description>
        <formula>rC_Giving__Summary__r.rC_Giving__Giving_Level__c</formula>
        <label>Giving Level ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_Status__c</fullName>
        <description>Populated by Formula, this field reflects the status of meeting the current Giving Level.</description>
        <formula>TEXT(rC_Giving__Summary__r.rC_Giving__Giving_Level_Status__c)</formula>
        <label>Giving Level Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Number__c</fullName>
        <description>Number of Giving record used as unique identifier.</description>
        <label>Giving #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type_Engine__c</fullName>
        <description>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</description>
        <inlineHelpText>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</inlineHelpText>
        <label>Giving Type Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Public Media</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type__c</fullName>
        <description>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</description>
        <inlineHelpText>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</inlineHelpText>
        <label>Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Years__c</fullName>
        <description>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</description>
        <inlineHelpText>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</inlineHelpText>
        <label>Giving Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Purpose__c</fullName>
        <description>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</description>
        <inlineHelpText>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</inlineHelpText>
        <label>Grant Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Requirements__c</fullName>
        <description>Link to grant requirements.</description>
        <inlineHelpText>Link to grant requirements.</inlineHelpText>
        <label>Grant Requirements</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Type__c</fullName>
        <description>Type of Designation of Grant.</description>
        <inlineHelpText>Type of Designation of Grant.</inlineHelpText>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grantor_ID__c</fullName>
        <description>Internal ID of Grantor (use if not linked to Account).</description>
        <inlineHelpText>Internal ID of Grantor (use if not linked to Account).</inlineHelpText>
        <label>Grantor ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Initial_Application_Submission_Format__c</fullName>
        <description>Method by which the initial application was received.</description>
        <inlineHelpText>Method by which the initial application was received.</inlineHelpText>
        <label>Initial Application Submission Format</label>
        <picklist>
            <picklistValues>
                <fullName>E-Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail-Hard Copy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Internal_Grant_ID__c</fullName>
        <description>Grant ID on initial application form.</description>
        <inlineHelpText>Grant ID on initial application form.</inlineHelpText>
        <label>Internal Grant ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</description>
        <inlineHelpText>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</inlineHelpText>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</inlineHelpText>
        <label>Force Canceled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</inlineHelpText>
        <label>Force Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Donation Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Donation Pledge if set to true.</inlineHelpText>
        <label>Giving Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Inkind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giving Inkind?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Membership Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Membership Pledge if set to true.</inlineHelpText>
        <label>Giving Membership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Purchase if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Purchase if set to true.</inlineHelpText>
        <label>Giving Purchase?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Transaction if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Transaction if set to true.</inlineHelpText>
        <label>Giving Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Pledge if set to true.</inlineHelpText>
        <label>Giving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Gift as Matching Gift.</description>
        <inlineHelpText>Designates Gift as Matching Gift.</inlineHelpText>
        <label>Matching?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Payment_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by trigger; indicates payment was refunded.</description>
        <label>Payment Refunded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto populated, indicates if this Giving is refundable.</description>
        <label>Refundable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</description>
        <inlineHelpText>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</inlineHelpText>
        <label>Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</description>
        <inlineHelpText>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</inlineHelpText>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</description>
        <inlineHelpText>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</inlineHelpText>
        <label>Shopper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</inlineHelpText>
        <label>Force Suspended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Sustainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving record and constituent as a Sustaining giver.</description>
        <inlineHelpText>Designates Giving record and constituent as a Sustaining giver.</inlineHelpText>
        <label>Sustainer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Tribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as a Tribute.</description>
        <inlineHelpText>Designates Giving as a Tribute.</inlineHelpText>
        <label>Tribute?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Uncollectible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</inlineHelpText>
        <label>Force Uncollectible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment_Date__c</fullName>
        <description>Automatically populated, records the date on which the Last Giving Amount adjustment was made.</description>
        <inlineHelpText>Date on which the Last Giving Amount adjustment was made.</inlineHelpText>
        <label>Last Giving Amount Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment__c</fullName>
        <description>Automatically Populated, records the delta in Giving Amounts from the Current Value to the Last Value stored in the record.</description>
        <inlineHelpText>Delta in Giving Amounts from the Current Value to the Last Value stored in the record.</inlineHelpText>
        <label>Last Giving Amount Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Letter_Of_Intent_Deadline__c</fullName>
        <description>Deadline to submit notification to donor that organization will be competing for this grant.</description>
        <inlineHelpText>Deadline to submit notification to donor that organization will be competing for this grant.</inlineHelpText>
        <label>Letter of Intent Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_2__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_3__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_4__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that will Match the gift, typically the employer of the associated Contact donor.</description>
        <inlineHelpText>Account that will Match the gift, typically the employer of the associated Contact donor.</inlineHelpText>
        <label>Matching Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Matching Gifts)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Amount__c</fullName>
        <description>Amount the Matching Account will match.</description>
        <inlineHelpText>Amount the Matching Account will match.</inlineHelpText>
        <label>Matching Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Notice__c</fullName>
        <description>Auto populated, displays an error related to the giving record if inconsistent with the matching rules provided on the related Account</description>
        <label>Matching Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity on Matching Account that matches the gift.</description>
        <inlineHelpText>Opportunity on Matching Account that matches the gift.</inlineHelpText>
        <label>Matching Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Matching Opportunity)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Status__c</fullName>
        <description>Internal status of Matching Gift.</description>
        <inlineHelpText>Internal status of Matching Gift.</inlineHelpText>
        <label>Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_1__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 1.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 1.</inlineHelpText>
        <label>Media Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_2__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 2.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 2.</inlineHelpText>
        <label>Media Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_3__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 3.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 3.</inlineHelpText>
        <label>Media Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_1__c</fullName>
        <label>Media Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_2__c</fullName>
        <label>Media Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_3__c</fullName>
        <label>Media Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Notice_Of_Grant_Awarded_Date__c</fullName>
        <description>Date when notified that Grant is approved.</description>
        <inlineHelpText>Date when notified that Grant is approved.</inlineHelpText>
        <label>Notice Of Grant Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of Giving amounts that are not contributing to your forecast.</description>
        <label>Omitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving amounts that are not contributing to your forecast.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10,  MIN(150, rC_Giving__Omitted_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Omitted_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Omitted_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Omitted Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving amounts that are not contributing to your forecast.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Omitted_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Omitted Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent_Name__c</fullName>
        <description>Name of the record from Parent Opportunity lookup.</description>
        <formula>rC_Giving__Parent__r.Name</formula>
        <inlineHelpText>Name of the record from Parent Opportunity lookup.</inlineHelpText>
        <label>Parent Opportunity: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Parent Opportunity or Pledge.</description>
        <inlineHelpText>Link to the Parent Opportunity or Pledge.</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Giving/Transactions</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payer_Name__c</fullName>
        <description>Auto Populated name of the Payor of a transaction.</description>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Count__c</fullName>
        <description>Number of payments that will be included in a Irregular membership / donation.</description>
        <inlineHelpText>Number of payments for Irregular frequency.</inlineHelpText>
        <label>Payment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Day__c</fullName>
        <description>Day of the month when a payments will be scheduled for future transactions.</description>
        <inlineHelpText>Day of the month when a payments will be scheduled for future transactions.</inlineHelpText>
        <label>Payment Day</label>
        <picklist>
            <controllingField>rC_Giving__Payment_Frequency__c</controllingField>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_End_Date__c</fullName>
        <description>Last day payments can be scheduled. (If a donor pledges $10/month on 6/1/2012 with a Payment End Date of 8/1/2013,  the last payment will be made on 8/1/2013 with a total giving of $140)</description>
        <inlineHelpText>Last day payments can be scheduled. (If a donor pledges $10/month on 6/1/2012 with a Payment End Date of 8/1/2013,  the last payment will be made on 8/1/2013 with a total giving of $140)</inlineHelpText>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>